refactor: add temp directory to ignored files

--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@ export_presets.cfg
 # Mono-specific ignores
 .mono/
 
-# Save data ignores
-save_data.json
+# Ignore Temp directory
+Temp/
 
 ### Linux ###
 *~
